# DataJuggler

./: Cargo.toml  FunctionalitiesList  input.css  notes.txt
src/: components.rs  filter_components.rs  json_filter_methods.rs  main.rs  methodsToBeImplemented.rs  style.css
tests/: tests.rs
tests/resources/jsons/: json_deep_tree.json
