[package]
name = "DataJuggler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-Awarnings"]

[dependencies]
dioxus = "0.4.0"
serde_json = "1.0.94"
dioxus-desktop = "0.4.0"
winit = "0.28.6"
jsonxf = "1.1"
